--- a/scripts/1_development.Rmd
+++ b/scripts/1_development.Rmd
@@ -151,6 +151,84 @@ animate(bt, pause = 0.5, zlim = c(1, 4), maxpixels=5000, n=1,
 
 ```
 
+```{r create-tester}
+# tester
+dt <- cc_create_dt()
+dt[3] <- 1
+dt[13] <- 1
+dt[12] <- 0
+dt[4, 1:4] <- 1
+dt[14, 1] <- 1
+
+# the above, encapsulated as a function:
+dt <- cc_create_bin()
+
+dt1 <- copy(dt)
+dt2 <- copy(dt)
+dt2[, ':='(x = 2006:2020,
+           y = 10004:10018)]
+setcolorder(dt2, c("x", "y", paste0("V", 1:15)))
+dt2
+
+identical(dt1, dt2[, -c("x", "y")])
+
+
+# make a big file:
+# simplest way
+big <- cc_create_dt(numrow = 4e7, numcol = 15)
+object_size(big)
+
+
+
+# old way:
+# how do I deal with such a large data.table?
+
+# two real options: 
+# 1. load the data onto adroit and run the codes there, or
+# 2. break the raster brick into chunks, maybe four or 9. 
+
+# test it
+test_dt1 <- copy(bs_dt)
+test_dt2 <- copy(bs_dt)
+test_dt2[, c("x", "y") := NULL]
+
+tic(); cc_update_lc(test_dt1); toc()
+tic(); cc_update_lc(test_dt2); toc()
+identical(test_dt1[, !c("x", "y")], test_dt2)
+
+bin_test1 <- test_dt2 -1
+bin_test2 <- copy(test_dt2)
+
+# big file
+rm(dt_merge)
+dt_merge <- fread(file = paste0(p_dat, "Abandonment/belarus_1987-88_dt.csv"))
+dt_merge[, c("x", "y") := NULL]
+names(dt_merge) <- gsub("belarus_", "y", names(dt_merge))
+object_size(dt_merge)
+
+# add more columns, if desired
+dt_merge[, c(paste0("y", 1989:2004)) := .(y1987, y1988, y1987, y1988, 
+                                          y1987, y1988, y1987, y1988, 
+                                          y1987, y1988, y1987, y1988, 
+                                          y1987, y1988, y1987, y1988)] 
+
+fwrite(dt_merge, file = paste0(p_dat, "Abandonment/test_big_dt_merge.csv"))
+rm(dt_merge)
+dt_merge <- fread(file = paste0(p_dat, "Abandonment/test_big_dt_merge.csv"))
+env_size(ls())
+
+
+# alternatively
+big <- cc_create_dt(numrow = 5*1e7, numcol = 15)
+big
+
+object_size(big)
+
+
+
+```
+
+
 ```{r subset-rasters}
 plot(bs$smolensk1987)
 mapView(bs$smolensk1987)
@@ -261,52 +339,6 @@ freq(r_0)
 
 ```
 
-```{r big}
-# how do I deal with such a large data.table?
-
-# two real options: 
-# 1. load the data onto adroit and run the codes there, or
-# 2. break the raster brick into chunks, maybe four or 9. 
-
-# test it
-test_dt1 <- copy(bs_dt)
-test_dt2 <- copy(bs_dt)
-test_dt2[, c("x", "y") := NULL]
-
-tic(); cc_update_lc(test_dt1); toc()
-tic(); cc_update_lc(test_dt2); toc()
-identical(test_dt1[, !c("x", "y")], test_dt2)
-
-bin_test1 <- test_dt2 -1
-bin_test2 <- copy(test_dt2)
-
-# big file
-rm(dt_merge)
-dt_merge <- fread(file = paste0(p_dat, "Abandonment/belarus_1987-88_dt.csv"))
-dt_merge[, c("x", "y") := NULL]
-names(dt_merge) <- gsub("belarus_", "y", names(dt_merge))
-object_size(dt_merge)
-
-# add more columns, if desired
-dt_merge[, c(paste0("y", 1989:2004)) := .(y1987, y1988, y1987, y1988, 
-                                          y1987, y1988, y1987, y1988, 
-                                          y1987, y1988, y1987, y1988, 
-                                          y1987, y1988, y1987, y1988)] 
-
-fwrite(dt_merge, file = paste0(p_dat, "Abandonment/test_big_dt_merge.csv"))
-rm(dt_merge)
-dt_merge <- fread(file = paste0(p_dat, "Abandonment/test_big_dt_merge.csv"))
-env_size(ls())
-
-
-# alternatively
-big <- cc_create_dt(numrow = 5*1e7, numcol = 15)
-big
-
-object_size(big)
-
-
-```
 
 ```{r prep_data.table}
 # load as a data.table
@@ -847,7 +879,7 @@ lengths <- cc_extract_length(dt_diff)
 
 # try with a big file:
 
-big <- cc_create_dt(numrow = 2e7, numcol = 15)
+big <- cc_create_dt(numrow = 4e7, numcol = 15)
 object_size(big)
 
 tic("filter non abandonment pixels")
@@ -890,6 +922,34 @@ identical(big1, big2)
 
 toc()
 
+
+# trying cc_diff_dt again, trying dealing with memory better
+cc_diff_dt <- function(dt){
+  # produces a data.table with year-to-year lagged differences (much like base::diff())
+  dt_lead <- copy(dt)
+  dt_lead[, names(dt_lead)[1] := NULL][, end := 0]
+  # dt_diff <- dt_lead - dt # I actually don't need to explicitly define a new object
+  dt_lead - dt
+}
+
+dt <- copy(dt_backup)
+dt_lead <- copy(dt)
+dt_lead[, names(dt_lead)[1] := NULL][, end := 0]
+dt_diff2 <- dt_lead - dt
+dt_lead <- dt_lead - dt
+identical(dt_diff2, dt_lead)
+data.table::copy()
+object_size(dt)
+object_size(dt_diff)
+object_size(dt_lead)
+object_size(dt_diff2)
+identical(dt_diff, dt_diff2)
+
+dt_diff1 <- cc_diff_dt(dt)
+identical(dt_diff1, dt_diff2)
+
+dt_diff2 <- cc_diff_dt(dt2)
+
 ```
 
 
@@ -912,7 +972,8 @@ source("scripts/util/_util_dt_filter_functions.R")
 
 
 tic("load raster")
-r <- brick(paste0(p_dat, "Abandonment/belarus_small.tif"))
+r <- brick("/Users/christophercrawford/Google Drive/_Projects/data/Abandonment/belarus_small.tif")
+
 nlayers(r) # 31 years in the time series
 names(r) <- paste0("y", 1:nlayers(r))
 toc()
@@ -943,15 +1004,11 @@ toc()
 
 tic("erase non abandonment periods")
 cc_erase_non_abn_periods(dt)
-toc() 
+toc()
 
-
-dt1 <- copy(dt)
-dt1[, c("x", "y") := NULL]
-identical(dt[, -c("x", "y")], dt1)
 
 tic("write out cleaned abandonment age data.table")
-fwrite(dt, file = paste0(p_dat_derived, "age.csv"))
+fwrite(dt, file = "/Users/christophercrawford/Google Drive/_Projects/abandonment_trajectories/data_derived/age.csv")
 toc()
 
 
@@ -960,27 +1017,23 @@ dt_diff <- cc_diff_dt(dt)
 toc()
 
 
-
 tic("extract length")
 length <- cc_extract_length(dt_diff)
-toc() 
+toc()
 
-# write out length vector
-fwrite(length, file = paste0(p_dat_derived, "length.csv"))
 
-dt_length <- data.table(length = length)
-dt_length[, .N, by = lengths]
+# write out length
+length <- data.table(length = length)
+fwrite(length, file = "/Users/christophercrawford/Google Drive/_Projects/abandonment_trajectories/data_derived/length.csv")
 
-dt_length[, mean(length)] # mean of 1.86 years if using no threshold
-dt_length[length >= 3, mean(length)] # mean of 3.83 years if using 3 year threshold
-# but remember, this is with the dummy data.
+# explore some stats:
+length[, .N, by = length]
+length[, mean(length)] # mean time abandoned if using no threshold
+length[length >= 3, mean(length)] # mean time abandoned, if using 3 year abandonment definition threshold
 
 
 # final toc()
 toc()
-
-mean(lengths)
-abs(lengths)
 ```
 
 
